--- a/src/app/components/main-layout/main-layout.component.css
+++ b/src/app/components/main-layout/main-layout.component.css
@@ -3,7 +3,9 @@ header{
     height:3rem;
     background: #2d4b65;
 }
-
+h3{
+    color:rgb(0, 162, 255);
+}
 section .nav{
     width: 100%;
     border-bottom:2px solid #666666;
