--- a/src/app/hrm-report/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/hrm-report/hrm-report.component.html
@@ -1,15 +1,71 @@
-
-    <div class="row">
-        <div class="block">
-            <app-stacked-area-chart></app-stacked-area-chart>
+    <div class="flex flex-wrap w-100">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
+            <div class="title">Tổng thu nhập năm 2020 và 2019</div>
+            <div class="content">
+                <div class="flex flex-wrap justify-between  ">
+                        <h3>Năm 2020</h3>
+                        <h3>13412</h3>
+                </div>
+                <div class="flex flex-wrap justify-between  ">
+                        <h3>Năm 2019</h3>
+                        <h3>134172</h3>
+                </div>
+                <div class="flex flex-wrap justify-between  ">
+                        <h3>Chênh lệch</h3>
+                    <div class=" justify-center flex " >
+                        <h3 class="triangle-up pt1"></h3>
+                        <h3 class="pl2">21341234</h3>
+                    </div>
+                </div>
+                <div class="flex flex-wrap justify-between  ">
+                        <h3>Tăng trưởng</h3>
+                        <h3>13412</h3>
+                </div>
+            </div>
         </div>
-        <div class="block">
-            <app-stacked-area-chart></app-stacked-area-chart>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
+            <div class="title">Số lượng nhân sự tháng 1 năm 2020 và tháng 1 2019</div>
+            <div class="content">
+                <div class="flex flex-wrap justify-between ">
+                        <h3>Tháng 1 năm 2020</h3>
+                        <h3>13412</h3>
+                </div>
+                <div class="flex flex-wrap justify-between ">
+                        <h3>Tháng 1 năm 2019</h3>
+                        <h3>134172</h3>
+                </div>
+                <div class="flex flex-wrap justify-between ">
+                        <h3>Chênh lệch</h3>
+                        <h3>13412</h3>
+                </div>
+                <div class="flex flex-wrap justify-between ">
+                        <h3>Tăng trưởng</h3>
+                        <h3>13412</h3>
+                </div>
+            </div>
         </div>
-        <div class="block">
-            <app-stacked-area-chart></app-stacked-area-chart>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
+            
         </div>
-        <div class="block">
-            <app-stacked-area-chart></app-stacked-area-chart>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
+            
         </div>
+</div>
+<div class="w-100 flex flex-wrap mt2">
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <app-horizontal-bar-chart></app-horizontal-bar-chart>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Cơ cấu tổng thu nhập theo phòng ban</div>
+        <app-pie-chart ></app-pie-chart>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Tổng thu nhập trung bình </div>
+        <app-horizontal-bar-chart></app-horizontal-bar-chart>
+    </div>
+    
+    
 </div>
