--- a/src/app/shared/grouped-bar-chart/grouped-bar-chart.component.html
+++ b/src/app/shared/grouped-bar-chart/grouped-bar-chart.component.html
@@ -1,7 +1,7 @@
-<ngx-charts-bar-vertical
+<ngx-charts-bar-vertical-2d
   [view]="view"
   [scheme]="colorScheme"
-  [results]="single"
+  [results]="multi"
   [gradient]="gradient"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
@@ -10,5 +10,8 @@
   [showYAxisLabel]="showYAxisLabel"
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
-  (select)="onSelect($event)">
-</ngx-charts-bar-vertical>
+  [legendTitle]="legendTitle"
+  (select)="onSelect($event)"
+  (activate)="onActivate($event)"
+  (deactivate)="onDeactivate($event)">
+</ngx-charts-bar-vertical-2d>
