--- a/src/app/shared/line-chart/line-chart.component.html
+++ b/src/app/shared/line-chart/line-chart.component.html
@@ -1,4 +1,4 @@
-<ngx-charts-area-chart-stacked
+<ngx-charts-line-chart
   [view]="view"
   [scheme]="colorScheme"
   [legend]="legend"
@@ -10,7 +10,9 @@
   [yAxisLabel]="yAxisLabel"
   [timeline]="timeline"
   [results]="multi"
-  [tooltipDisabled]="tooltipDisabled"
   (select)="onSelect($event)"
+  (activate)="onActivate($event)"
+  (deactivate)="onDeactivate($event)"
+  [tooltipDisabled]="tooltipDisabled"
   >
-</ngx-charts-area-chart-stacked>
+</ngx-charts-line-chart>
