--- a/src/app/hrm-report/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/hrm-report/hrm-report.component.html
@@ -1,5 +1,6 @@
     <div class="flex flex-wrap w-100">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
+            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
             <div class="title">Tổng thu nhập năm 2020 và 2019</div>
             <div class="content">
                 <div class="flex flex-wrap justify-between  ">
@@ -24,6 +25,7 @@
             </div>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
+            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
             <div class="title">Số lượng nhân sự tháng 1 năm 2020 và tháng 1 2019</div>
             <div class="content">
                 <div class="flex flex-wrap justify-between ">
@@ -54,6 +56,7 @@
 <div class="w-100 flex flex-wrap mt2">
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Cơ cấu tổng thu nhập theo phòng ban</div>
         <app-horizontal-bar-chart></app-horizontal-bar-chart>
     </div>
     
@@ -66,6 +69,55 @@
         <div class="title">Tổng thu nhập trung bình </div>
         <app-horizontal-bar-chart></app-horizontal-bar-chart>
     </div>
+</div>
+<div class="w-100 flex flex-wrap mt2">
     
+    <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 block2">
+        <div class="title">Tổng thu nhập</div>
+        <app-bar-chart></app-bar-chart>
+    </div>
     
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2">
+        <div class="title">Chênh lệch tổng thu nhập 2019 và 2020</div>
+        <app-line-chart></app-line-chart>
+    </div>
+    
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block2">
+        <div class="title">% tăng trưởng so với năm trước</div>
+        <app-horizontal-bar-chart></app-horizontal-bar-chart>
+    </div>
+</div>
+<div class="w-100 flex flex-wrap mt2">
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Tổng thu nhập trung bình</div>
+        <app-line-chart></app-line-chart>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Tăng trưởng so với tháng trước 2020</div>
+        <app-line-chart></app-line-chart>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">% tăng trưởng so với tháng trước năm 2020</div>
+        <app-bubble-chart></app-bubble-chart>
+    </div>
+</div>
+<div class="w-100 flex flex-wrap mt2">
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Số lượng nhân sự</div>
+        <app-grouped-bar-chart></app-grouped-bar-chart>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Số lượng nhân sự tăng</div>
+        <app-line-chart></app-line-chart>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
+        <div class="title">Số lượng nhân sự giảm</div>
+        <app-bubble-chart></app-bubble-chart>
+    </div>
 </div>
