xay dung co cau

--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -85,4 +85,7 @@
 </section>
 <h3>Bảng báo cáo nhân sự</h3>
 <router-outlet></router-outlet>
+<div class="w-100 mt2">
+    <img src="./../../../assets//Capture5.PNG" alt="">
+</div>
 <footer></footer>
