--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -91,7 +91,7 @@
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Tổng thu nhập trung bình</div>
-        <app-line-chart></app-line-chart>
+        <app-combo-line-bar-chart></app-combo-line-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
@@ -113,11 +113,11 @@
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Số lượng nhân sự tăng</div>
-        <app-line-chart></app-line-chart>
+        <app-combo-line-bar-chart></app-combo-line-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Số lượng nhân sự giảm</div>
-        <app-bubble-chart></app-bubble-chart>
+        <app-combo-line-bar-chart></app-combo-line-bar-chart>
     </div>
 </div>
