--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -18,74 +18,24 @@
                 <img src="./../../../assets//Capture4.PNG" alt="">
                 <h2 class="pl2">Báo cáo nhân sự công ty Gia Bảo</h2>
             </div>
-            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                <div class="row">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                        <div class="block">
-                            <label for="years">Năm</label>
-                            <select id="years">
-                                <option *ngFor="let year of years" label={{year}} value={{year}}>{{year}}</option>
-                                <option value="">All..</option>
-                            </select>
-                        </div>
-                        <div class="block">
-                            <label for="months">Tháng</label>
-                            <select id="months">
-                                <option value="">All..</option>
-                                <option *ngFor="let month of months" label={{month}} value={{month}}>{{month}}</option>  
-                            </select>
-                        </div>
-                        
-                    </div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                        <div class="block">
-                            <label for="branchs">Chi nhánh</label>
-                            <select id="branches">
-                                <option value="">All..</option>
-                                <option *ngFor="let branch of branches" value={{branch}} label={{branch}}>{{branch}}</option>
-                            </select>
-                        </div>
-                        <div class="block">
-                            <label for="office">Phòng ban</label>
-                            <select id="office">
-                               <option *ngFor="let office of offices" value={{office}} label={{office}}>{{office}}</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                        <div class="block">
-                            <label for="shops">Cửa hàng</label>
-                            <select id="shops">
-                                <option value="">All..</option>
-                                <option *ngFor="let shop of shops" value={{shop}}>{{shop}}</option>
-                            </select>
-                        </div>
-                        <div class="block">
-                            <label for="idHrm">Mã nhân viên</label>
-                            <select id="idHrm">
-                                <option value="">All..</option>
-                                <option *ngFor="let hrmId of hrmIds" label={{hrmId}} value={{hrmId}}>{{hrmId}}</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <div class="block">
-                    <label for="types">Hạng mục</label>
-                    <select id="types">
-                        <option *ngFor="let type of types" value={{type}} label={{type}} >{{type}}</option>
+            <form [formGroup]="filterForm" (ngSubmit)="onSubmit(filterForm.value)" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 flex-wrap flex ">
+                <div class="block" *ngFor="let item of filter">
+                    <label for={{item.labels}}>{{item.labels}}</label>
+                    <select id={{item.labels}} formControlName={{item.formControlName}} required >
+                        <option *ngFor="let i of item.value" [ngValue]="i">{{i}}</option>
+                        <option selected="selected" value="">All..</option>
                     </select>
                 </div>
                 <div class="block">
-                    <div class="btn btn-success">Lấy dữ liệu</div>
+                        <button class="btn btn-success mt2" type="submit">Lấy dữ liệu</button>
                 </div>
-            </div>
+            </form>
         </div>
 </section>
 <h3>Bảng báo cáo nhân sự</h3>
 <router-outlet></router-outlet>
 <div class="w-100 mt2">
     <img src="./../../../assets//Capture5.PNG" alt="">
+    
 </div>
 <footer></footer>
