xay dung co cau

--- a/src/app/shared/stacked-area-chart/stacked-area-chart.component.html
+++ b/src/app/shared/stacked-area-chart/stacked-area-chart.component.html
@@ -10,6 +10,7 @@
   [yAxisLabel]="yAxisLabel"
   [timeline]="timeline"
   [results]="multi"
+  [gradient]="gradient"
   [tooltipDisabled]="tooltipDisabled"
   (select)="onSelect($event)"
   >
