--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -36,6 +36,6 @@
 <router-outlet></router-outlet>
 <div class="w-100 mt2">
     <img src="./../../../assets//Capture5.PNG" alt="">
-    
+    <p>Form value: {{filterForm.value.year}}</p>
 </div>
 <footer></footer>
