--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.css
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.css
@@ -1,16 +1,43 @@
+
 .block{
     border-top:1px solid #cbcbcb;
     border-left:1px solid #cbcbcb;
     border-bottom:1px solid #cbcbcb;
     position: relative;
+    height: 12.5rem;
+}
+.block .different{
+    width: 100%;
+    height: fit-content;
+    justify-content: center;
+}
+.block .level h3{
+    text-align: center;
+    color:#a5cca7;
+    font-weight: 700;
+    margin-bottom: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.block .percent h4{
+    text-align: center;
+    color:#a5cca7;
+    font-weight: 600;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.now h5{
+    color: #cbcbcb;
+}
+.past h5{
+    color: #E44D25;
 }
 .stacked-chart{
-    top:2rem;
+    top:3.2rem;
     left:1rem;
     position:absolute;
-    z-index: -1;
+    z-index: 0;
 }
 .title{
+    font-size: 0.8rem;
  color: rgb(0, 162, 255);
  margin-top:0.3rem;
 }
@@ -19,14 +46,14 @@
 	height: 0;
 	border-left: 7px solid transparent;
 	border-right: 7px solid transparent;
-	border-bottom: 14px solid #555;
+	border-bottom: 14px solid #a5cca7;
 }
 .triangle-down {
 	width: 0;
 	height: 0;
 	border-left: 25px solid transparent;
 	border-right: 25px solid transparent;
-	border-top: 50px solid #555;
+	border-top: 50px solid #be4060;
 }
 .block2{
     border-top:1px solid #cbcbcb;
