--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -1,53 +1,71 @@
     <div class="flex flex-wrap w-100">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
-            <div class="title">Tổng thu nhập năm 2020 và 2019</div>
-            <div class="content">
-                <div class="flex flex-wrap justify-between  ">
-                        <h3>Năm 2020</h3>
-                        <h3>13412</h3>
+            <div class="different">
+                <div class="title">Tổng thu nhập năm</div>
+                <div class="level flex flex-wrap w-100 justify-center">
+                    <h3 class="triangle-up pt1"></h3>
+                    <h3 class="pl2">21341234</h3>
                 </div>
-                <div class="flex flex-wrap justify-between  ">
-                        <h3>Năm 2019</h3>
-                        <h3>134172</h3>
+                <div class="percent flex flex-wrap w-100 justify-center">
+                    <h4 class="triangle-up pt1"></h4>
+                    <h4 class="pl2">100%</h4>
                 </div>
-                <div class="flex flex-wrap justify-between  ">
-                        <h3>Chênh lệch</h3>
-                    <div class=" justify-center flex " >
-                        <h3 class="triangle-up pt1"></h3>
-                        <h3 class="pl2">21341234</h3>
-                    </div>
+                <div class="now w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm 2020</h5>
+                    <h5>12341324</h5>
                 </div>
-                <div class="flex flex-wrap justify-between  ">
-                        <h3>Tăng trưởng</h3>
-                        <h3>13412</h3>
+                <div class="past w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm 2019</h5>
+                    <h5>12341324</h5>
                 </div>
             </div>
+           
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
-            <div class="title">Số lượng nhân sự tháng 1 năm 2020 và tháng 1 2019</div>
-            <div class="content">
-                <div class="flex flex-wrap justify-between ">
-                        <h3>Tháng 1 năm 2020</h3>
-                        <h3>13412</h3>
+            <div class="different">
+                <div class="title">Tổng thu nhập tháng 1 năm 2020 và tháng 1 năm 2019</div>
+                <div class="level flex flex-wrap w-100 justify-center">
+                    <h3 class="triangle-up pt1"></h3>
+                    <h3 class="pl2">21341234</h3>
                 </div>
-                <div class="flex flex-wrap justify-between ">
-                        <h3>Tháng 1 năm 2019</h3>
-                        <h3>134172</h3>
+                <div class="percent flex flex-wrap w-100 justify-center">
+                    <h4 class="triangle-up pt1"></h4>
+                    <h4 class="pl2">100%</h4>
                 </div>
-                <div class="flex flex-wrap justify-between ">
-                        <h3>Chênh lệch</h3>
-                        <h3>13412</h3>
+                <div class="now w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm 2020</h5>
+                    <h5>12341324</h5>
                 </div>
-                <div class="flex flex-wrap justify-between ">
-                        <h3>Tăng trưởng</h3>
-                        <h3>13412</h3>
+                <div class="past w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm 2019</h5>
+                    <h5>12341324</h5>
                 </div>
             </div>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
-            
+            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
+
+            <div class="different">
+                <div class="level flex flex-wrap w-100 justify-center">
+                    <h3 class="triangle-up pt1"></h3>
+                    <h3 class="pl2">21341234</h3>
+                </div>
+                <div class="percent flex flex-wrap w-100 justify-center">
+                    <h4 class="triangle-up pt1"></h4>
+                    <h4 class="pl2">100%</h4>
+                </div>
+                <div class="now w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm 2020</h5>
+                    <h5>12341324</h5>
+                </div>
+                <div class="past w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm 2019</h5>
+                    <h5>12341324</h5>
+                </div>
+            </div>
+           
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
             
