--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -2,7 +2,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
             <div class="different">
-                <div class="title">Tổng thu nhập năm {{year}} và {{year-1}}</div>
+                <div class="title">Tổng thu nhập năm {{nam}} và {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1"></h3>
                     <h3 class="pl2">21341234</h3>
@@ -12,12 +12,12 @@
                     <h4 class="pl2">100%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{year}}</h5>
-                    <h5>12341324</h5>
+                    <h5>Năm {{nam}}</h5>
+                    <h5>{{getsumwithcategories}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{year-1}}</h5>
-                    <h5>12341324</h5>
+                    <h5>Năm {{nam-1}}</h5>
+                    <h5>{{getsumwithcategories}}</h5>
                 </div>
             </div>
            
@@ -25,7 +25,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
             <div class="different">
-                <div class="title">Tổng thu nhập tháng {{month}} năm {{year}} và tháng {{month}} năm {{year-1}}</div>
+                <div class="title">Tổng thu nhập tháng {{thang}} năm {{nam}} và tháng {{thang}} năm {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1"></h3>
                     <h3 class="pl2">21341234</h3>
@@ -35,11 +35,11 @@
                     <h4 class="pl2">100%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{year}}</h5>
+                    <h5>Năm {{nam}}</h5>
                     <h5>12341324</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{year-1}}</h5>
+                    <h5>Năm {{nam-1}}</h5>
                     <h5>12341324</h5>
                 </div>
             </div>
