--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.css
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.css
@@ -13,19 +13,19 @@
 }
 .block .level h3{
     text-align: center;
-    color:#a5cca7;
+    /* color:#a5cca7; */
     font-weight: 700;
     margin-bottom: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .block .percent h4{
     text-align: center;
-    color:#a5cca7;
+    /* color:#a5cca7; */
     font-weight: 600;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .now h5{
-    color: #cbcbcb;
+    color: #E44D25;
 }
 .past h5{
     color: #E44D25;
@@ -34,7 +34,7 @@
     top:3.2rem;
     left:1rem;
     position:absolute;
-    z-index: 0;
+    z-index: -1;
 }
 .title{
     font-size: 0.8rem;
@@ -46,14 +46,14 @@
 	height: 0;
 	border-left: 7px solid transparent;
 	border-right: 7px solid transparent;
-	border-bottom: 14px solid #a5cca7;
+	border-bottom: 14px solid #06f812;
 }
 .triangle-down {
 	width: 0;
 	height: 0;
-	border-left: 25px solid transparent;
-	border-right: 25px solid transparent;
-	border-top: 50px solid #be4060;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-top: 14px solid #fa0303;
 }
 .block2{
     border-top:1px solid #cbcbcb;
