--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -4,20 +4,26 @@
             <div class="different">
                 <div class="title">Tổng thu nhập năm {{nam}} và {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
-                    <h3 class="triangle-up pt1"></h3>
-                    <h3 class="pl2">21341234</h3>
+                    <h3 class="triangle-up pt1" *ngIf="getsumwithcategoriesnow-getsumwithcategoriespast>0"></h3>
+                    <h3 class="triangle-down pt1" *ngIf="getsumwithcategoriespast-getsumwithcategoriesnow>0"></h3>
+                    <h3 class="pl2" *ngIf="(getsumwithcategoriesnow-getsumwithcategoriespast)>0" style="color: #06f812;">{{getsumwithcategoriesnow-getsumwithcategoriespast}}</h3>
+                    <h3 class="pl2" *ngIf="(getsumwithcategoriespast-getsumwithcategoriesnow)>0" style="color:#fa0303;">{{getsumwithcategoriespast-getsumwithcategoriesnow}}</h3>
                 </div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="triangle-up pt1"></h4>
-                    <h4 class="pl2">100%</h4>
+                    <h4 class="triangle-up pt1" *ngIf="getsumwithcategoriesnow-getsumwithcategoriespast>0"></h4>
+                    <h4 class="triangle-down pt1" *ngIf="getsumwithcategoriespast-getsumwithcategoriesnow>0"></h4>
+                    <h4 class="pl2 " *ngIf="getsumwithcategoriespast!==0&&getsumwithcategoriesnow!==0&&getsumwithcategoriesnow>getsumwithcategoriespast" style="color: #06f812;">{{(getsumwithcategoriesnow-getsumwithcategoriespast)/(getsumwithcategoriespast)}}</h4>
+                    <h4 class="pl2 " *ngIf="getsumwithcategoriespast!==0&&getsumwithcategoriesnow!==0&&getsumwithcategoriespast>getsumwithcategoriesnow" style="color: #fa0303;">{{(getsumwithcategoriesnow-getsumwithcategoriespast)/(getsumwithcategoriespast)}}</h4>
+                    <h4 class="pl2" *ngIf="getsumwithcategoriespast==0&&getsumwithcategoriesnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 yellow" *ngIf="getsumwithcategoriespast>=getsumwithcategoriesnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{nam}}</h5>
-                    <h5>{{getsumwithcategories}}</h5>
+                    <h5>{{getsumwithcategoriesnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{nam-1}}</h5>
-                    <h5>{{getsumwithcategories}}</h5>
+                    <h5>{{getsumwithcategoriespast}}</h5>
                 </div>
             </div>
            
@@ -25,44 +31,28 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
             <div class="different">
-                <div class="title">Tổng thu nhập tháng {{thang}} năm {{nam}} và tháng {{thang}} năm {{nam-1}}</div>
+                <div class="title">Tổng thu nhập tháng {{thang}} năm {{nam}} và tháng {{thang}} {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
-                    <h3 class="triangle-up pt1"></h3>
-                    <h3 class="pl2">21341234</h3>
+                    <h3 class="triangle-up pt1" *ngIf="getsumwithmonthnow-getsumwithmonthpast>0"></h3>
+                    <h3 class="triangle-down pt1" *ngIf="getsumwithmonthpast-getsumwithmonthnow>0"></h3>
+                    <h3 class="pl2" *ngIf="(getsumwithmonthnow-getsumwithmonthpast)>0" style="color: #06f812;">{{getsumwithmonthnow-getsumwithmonthpast}}</h3>
+                    <h3 class="pl2" *ngIf="(getsumwithmonthpast-getsumwithmonthnow)>0" style="color:#fa0303;">{{getsumwithmonthpast-getsumwithmonthnow}}</h3>
                 </div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="triangle-up pt1"></h4>
-                    <h4 class="pl2">100%</h4>
+                    <h4 class="triangle-up pt1" *ngIf="getsumwithmonthnow-getsumwithmonthpast>0"></h4>
+                    <h4 class="triangle-down pt1" *ngIf="getsumwithmonthpast-getsumwithmonthnow>0"></h4>
+                    <h4 class="pl2 " *ngIf="getsumwithmonthpast!==0&&getsumwithmonthnow!==0&&getsumwithmonthnow>getsumwithmonthpast" style="color: #06f812;">{{(getsumwithmonthnow-getsumwithmonthpast)/(getsumwithmonthpast)}}</h4>
+                    <h4 class="pl2 " *ngIf="getsumwithmonthpast!==0&&getsumwithmonthnow!==0&&getsumwithmonthpast>getsumwithmonthnow" style="color: #fa0303;">{{(getsumwithmonthnow-getsumwithmonthpast)/(getsumwithmonthpast)}}</h4>
+                    <h4 class="pl2" *ngIf="getsumwithmonthpast==0&&getsumwithmonthnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 yellow" *ngIf="getsumwithmonthpast>=getsumwithmonthnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{nam}}</h5>
-                    <h5>12341324</h5>
+                    <h5>{{getsumwithmonthnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{nam-1}}</h5>
-                    <h5>12341324</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
-            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
-
-            <div class="different">
-                <div class="level flex flex-wrap w-100 justify-center">
-                    <h3 class="triangle-up pt1"></h3>
-                    <h3 class="pl2">21341234</h3>
-                </div>
-                <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="triangle-up pt1"></h4>
-                    <h4 class="pl2">100%</h4>
-                </div>
-                <div class="now w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm 2020</h5>
-                    <h5>12341324</h5>
-                </div>
-                <div class="past w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm 2019</h5>
-                    <h5>12341324</h5>
+                    <h5>{{getsumwithmonthpast}}</h5>
                 </div>
             </div>
            
