--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -31,7 +31,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
             <div class="different">
-                <div class="title">Tổng thu nhập tháng {{thang}} năm {{nam}} và tháng {{thang}} {{nam-1}}</div>
+                <div class="title">Tổng thu nhập tháng {{thang}} năm {{nam}} và năm {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1" *ngIf="getsumwithmonthnow-getsumwithmonthpast>0"></h3>
                     <h3 class="triangle-down pt1" *ngIf="getsumwithmonthpast-getsumwithmonthnow>0"></h3>
@@ -58,31 +58,67 @@
            
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
-            
+            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
+            <div class="different">
+                <div class="title">Số lượng nhân sự tháng {{thang}} năm {{nam}} và {{nam-1}}</div>
+                <div class="level flex flex-wrap w-100 justify-center">
+                    <h3 class="triangle-up pt1" *ngIf="getcountedhrminmonthnow-getcountedhrminmonthpast>0"></h3>
+                    <h3 class="triangle-down pt1" *ngIf="getcountedhrminmonthpast-getcountedhrminmonthnow>0"></h3>
+                    <h3 class="pl2" *ngIf="(getcountedhrminmonthnow-getcountedhrminmonthpast)>0" style="color: #06f812;">{{getcountedhrminmonthnow-getcountedhrminmonthpast}} người</h3>
+                    <h3 class="pl2" *ngIf="(getcountedhrminmonthpast-getcountedhrminmonthnow)>0" style="color:#fa0303;">{{getcountedhrminmonthpast-getcountedhrminmonthnow}} người</h3>
+                </div>
+                <div class="percent flex flex-wrap w-100 justify-center">
+                    <h4 class="triangle-up pt1" *ngIf="getcountedhrminmonthnow-getcountedhrminmonthpast>0"></h4>
+                    <h4 class="triangle-down pt1" *ngIf="getcountedhrminmonthpast-getcountedhrminmonthnow>0"></h4>
+                    <h4 class="pl2 " *ngIf="getcountedhrminmonthpast!==0&&getcountedhrminmonthnow!==0&&getcountedhrminmonthnow>getcountedhrminmonthpast" style="color: #06f812;">{{(getcountedhrminmonthnow-getcountedhrminmonthpast)/(getcountedhrminmonthpast)}}</h4>
+                    <h4 class="pl2 " *ngIf="getcountedhrminmonthpast!==0&&getcountedhrminmonthnow!==0&&getcountedhrminmonthpast>getcountedhrminmonthnow" style="color: #fa0303;">{{(getcountedhrminmonthnow-getcountedhrminmonthpast)/(getcountedhrminmonthpast)}}</h4>
+                    <h4 class="pl2" *ngIf="getcountedhrminmonthpast==0&&getcountedhrminmonthnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 yellow" *ngIf="getcountedhrminmonthpast>=getcountedhrminmonthnow">0%</h4>
+                </div>
+                <div class="now w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm {{nam}}</h5>
+                    <h5>{{getcountedhrminmonthnow}} người</h5>
+                </div>
+                <div class="past w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Năm {{nam-1}}</h5>
+                    <h5>{{getcountedhrminmonthpast}} người</h5>
+                </div>
+            </div> 
         </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
+            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
+            <div class="different">
+                <div class="title">Số lượng nhân sự tăng, giảm tháng {{thang}} năm {{nam}}</div>
+                <div class="percent flex flex-wrap w-100 justify-center">
+                    <h4 class="pl2" style="color: #06f812;">Tăng {{getcountedallnewhr}}</h4>
+                    <h4 class="pl2" style="color: #fa0303;">Giảm {{getcountedallquitedhr}}</h4>
+                </div>
+            </div> 
+        </div>
+
 </div>
 <div class="w-100 flex flex-wrap mt2">
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Cơ cấu tổng thu nhập theo phòng ban</div>
-        <app-horizontal-bar-chart></app-horizontal-bar-chart>
+        <app-horizontal-bar-chart [receivedData]="getsumwithcategoriesinpb"></app-horizontal-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Cơ cấu tổng thu nhập theo phòng ban</div>
-        <app-pie-chart ></app-pie-chart>
+        <app-pie-chart [receivedData]="getpercentofeachpb" ></app-pie-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Tổng thu nhập trung bình </div>
-        <app-horizontal-bar-chart></app-horizontal-bar-chart>
+        <app-horizontal-bar-chart [receivedData]="getaverage"></app-horizontal-bar-chart>
     </div>
 </div>
 <div class="w-100 flex flex-wrap mt2">
     
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 block2">
         <div class="title">Tổng thu nhập</div>
-        <app-bar-chart></app-bar-chart>
+        <app-grouped-bar-chart></app-grouped-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2">
