--- a/src/app/shared/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/shared/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -1,7 +1,7 @@
 <ngx-charts-bar-horizontal
 [view]="view"
 [scheme]="colorScheme"
-[results]="single"
+[results]="receivedData"
 [gradient]="gradient"
 [xAxis]="showXAxis"
 [yAxis]="showYAxis"
