--- a/src/app/shared/pie-chart/pie-chart.component.html
+++ b/src/app/shared/pie-chart/pie-chart.component.html
@@ -1,7 +1,7 @@
 <ngx-charts-pie-chart
       [view]="view"
       [scheme]="colorScheme"
-      [results]="single"
+      [results]="receivedData"
       [legend]="showLegend"
       [explodeSlices]="explodeSlices"
       [labels]="showLabels"
