xay dung co cau

--- a/src/app/shared/pie-chart/pie-chart.component.html
+++ b/src/app/shared/pie-chart/pie-chart.component.html
@@ -5,6 +5,7 @@
       [legend]="showLegend"
       [explodeSlices]="explodeSlices"
       [labels]="showLabels"
+      [gradient]="gradient"
       [doughnut]="doughnut"
       (select)="onSelect($event)">
       <ng-template #tooltipTemplate let-model="model">
