--- a/src/app/shared/line-chart/line-chart.component.html
+++ b/src/app/shared/line-chart/line-chart.component.html
@@ -9,7 +9,7 @@
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [timeline]="timeline"
-  [results]="multi"
+  [results]="receivedData"
   (select)="onSelect($event)"
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)"
