--- a/src/app/shared/bubble-chart/bubble-chart.component.html
+++ b/src/app/shared/bubble-chart/bubble-chart.component.html
@@ -1,7 +1,7 @@
 <ngx-charts-bubble-chart
   [view]="view"
   [scheme]="colorScheme"
-  [results]="bubbleData"
+  [results]="receivedData"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
   [legend]="showLegend"
