--- a/src/app/shared/combo-line-bar-chart/combo-line-bar-chart/combo-line-bar-chart.component.html
+++ b/src/app/shared/combo-line-bar-chart/combo-line-bar-chart/combo-line-bar-chart.component.html
@@ -1,8 +1,9 @@
 <combo-chart-component
   [view]="view"
   [scheme]="comboBarScheme"
+  [noBarWhenZero]="noBarWhenZero"
   [colorSchemeLine]="lineChartScheme"
-  [results]="barChart"
+  [results]="receivedData"
   [animations]="animations"
   [lineChart]="lineChartSeries"
   [gradient]="gradient"
