--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -1,6 +1,6 @@
     <div class="flex flex-wrap w-100">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
-            <app-stacked-area-chart class="stacked-chart" [receivedData]="stackedAreaChart" ></app-stacked-area-chart>
+            <app-stacked-area-chart class="stacked-chart" ></app-stacked-area-chart>
             <div class="different">
                 <div class="title">{{title}} năm {{nam}} và {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
@@ -135,17 +135,17 @@
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">{{title}} trung bình</div>
-        <app-combo-line-bar-chart></app-combo-line-bar-chart>
+        <app-combo-line-bar-chart [receivedData]="getaverageeachmonthnow" [receivedData2]="getaverageeachmonthpast"></app-combo-line-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Tăng trưởng so với tháng trước năm {{nam}}</div>
-        <app-line-chart></app-line-chart>
+        <app-line-chart [receivedData]="getdifferenteachmonth"></app-line-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">% tăng trưởng so với tháng trước năm {{nam}}</div>
-        <app-bubble-chart></app-bubble-chart>
+        <app-line-chart [receivedData]="getdifferentpercenteachmonth"></app-line-chart>
     </div>
 </div>
 <div class="w-100 flex flex-wrap mt2">
