--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -27,7 +27,7 @@
                     </select>
                 </div>
                 <div class="block">
-                        <button class="btn btn-success mt2" type="submit">Lấy dữ liệu</button>
+                        <button class="btn btn-success mt2 mb3" type="submit">Lấy dữ liệu</button>
                 </div>
             </form>
         </div>
@@ -35,7 +35,7 @@
 <h3>Bảng báo cáo nhân sự</h3>
 <router-outlet ></router-outlet>
 <div class="w-100 mt2">
-    <img src="./../../../assets//Capture5.PNG" alt="">
+    <img src="./../../../assets//Capture5.PNG" style="width:100%" alt="">
     <p>Form value: {{filterForm.value.year}}</p>
 </div>
 <footer></footer>
