--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -1,6 +1,6 @@
     <div class="flex flex-wrap w-100">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
-            <app-stacked-area-chart class="stacked-chart" ></app-stacked-area-chart>
+            <!-- <app-stacked-area-chart class="stacked-chart" ></app-stacked-area-chart> -->
             <div class="different">
                 <div class="title">{{title}} năm {{nam}} và {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
@@ -29,7 +29,7 @@
            
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
-            <app-stacked-area-chart class="stacked-chart" [receivedData]="stackedAreaChart"></app-stacked-area-chart>
+            <!-- <app-stacked-area-chart class="stacked-chart" [receivedData]="stackedAreaChart"></app-stacked-area-chart> -->
             <div class="different">
                 <div class="title">{{title}} tháng {{thang}} năm {{nam}} và năm {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
@@ -58,7 +58,7 @@
            
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
-            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
+            <!-- <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart> -->
             <div class="different">
                 <div class="title">Số lượng nhân sự tháng {{thang}} năm {{nam}} và {{nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
@@ -86,7 +86,7 @@
             </div> 
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
-            <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart>
+            <!-- <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart> -->
             <div class="different">
                 <div class="title">Số lượng nhân sự tăng, giảm tháng {{thang}} năm {{nam}}</div>
                 <div class="percent flex flex-wrap w-100 justify-center">
