--- a/src/app/components/main-layout/main-layout.component.css
+++ b/src/app/components/main-layout/main-layout.component.css
@@ -42,7 +42,7 @@ a:hover{
     border-top: #f6f6f6!important;
 }
 
-section .filter{
+/* section .filter{
     width: 100%;
     border-bottom:2px solid #666666;
     height: fit-content;
@@ -59,7 +59,7 @@ section .filter .block{
 .block select{
     width: 100%;
     height: 1.5rem;
-}
+} */
 footer{
     width: 100%;
     height: 18rem;
