--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -13,7 +13,7 @@
             </div>
             
         </div>
-        <div class="filter h3 row">
+        <!-- <div class="filter h3 row">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <img src="./../../../assets//Capture4.PNG" alt="">
                 <h2 class="pl2">Báo cáo nhân sự công ty Gia Bảo</h2>
@@ -21,7 +21,7 @@
             <form [formGroup]="filterForm" (ngSubmit)="onSubmit(filterForm.value)" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 flex-wrap flex ">
                 <div class="block" *ngFor="let item of filter">
                     <label for={{item.labels}}>{{item.labels}}</label>
-                    <select id={{item.labels}} formControlName={{item.formControlName}} required >
+                    <select id={{item.labels}} formControlName={{item.formControlName}} required  >
                         <option *ngFor="let i of item.view" [ngValue]="i">{{i}}</option>
                         <option selected="selected" value="">All..</option>
                     </select>
@@ -30,12 +30,11 @@
                         <button class="btn btn-success mt2" type="submit">Lấy dữ liệu</button>
                 </div>
             </form>
-        </div>
+        </div> -->
 </section>
-<h3>Bảng báo cáo nhân sự</h3>
-<router-outlet ></router-outlet>
+<router-outlet></router-outlet>
 <div class="w-100 mt2">
     <img src="./../../../assets//Capture5.PNG" alt="">
-    <p>Form value: {{filterForm.value.year}}</p>
+   
 </div>
 <footer></footer>
