--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -1,8 +1,44 @@
-    <div class="flex flex-wrap w-100">
+    <!-- filter -->
+    <section>
+        <div class="filter h3 row">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <img src="./../../../assets//Capture4.PNG" alt="">
+                <h2 class="pl2">Báo cáo nhân sự công ty Gia Bảo</h2>
+            </div>
+            <form [formGroup]="filterForm" (ngSubmit)="onSubmit(filterForm.value)" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 flex-wrap flex ">
+                <div class="block">
+                    <label for={{hrmReportService.years.labels}}>{{hrmReportService.years.labels}}</label>
+                    <select id={{hrmReportService.years.labels}} formControlName={{hrmReportService.years.formControlName}} required  >
+                        <option *ngFor="let i of hrmReportService.years.view" [ngValue]="i">{{i}}</option>
+                    </select>
+                </div>
+                <div class="block">
+                    <label for={{hrmReportService.months.labels}}>{{hrmReportService.months.labels}}</label>
+                    <select id={{hrmReportService.months.labels}} formControlName={{hrmReportService.months.formControlName}} required  >
+                        <option *ngFor="let i of hrmReportService.months.view" [ngValue]="i">{{i}}</option>
+                        <option selected="selected" value="0">All..</option>
+                    </select>
+                </div>
+                <div class="block" *ngFor="let item of hrmReportService.filter">
+                    <label for={{item.labels}}>{{item.labels}}</label>
+                    <select id={{item.labels}} formControlName={{item.formControlName}} required  >
+                        <option *ngFor="let i of item.view" [ngValue]="i">{{i}}</option>
+                        <option selected="selected" value="All">All..</option>
+                    </select>
+                </div>
+                <div class="block">
+                        <button class="btn btn-success mt2" type="submit">Lấy dữ liệu</button>
+                </div>
+            </form>
+        </div>
+    </section>
+    <h3>Bảng báo cáo nhân sự</h3>
+    <!-- main -->
+    <div class="flex flex-wrap w-100 main">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <!-- <app-stacked-area-chart class="stacked-chart" ></app-stacked-area-chart> -->
             <div class="different">
-                <div class="title">{{title}} năm {{nam}} và {{nam-1}}</div>
+                <div class="title">{{title}} năm {{hrmReportService.nam}} và {{hrmReportService.nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1" *ngIf="getsumwithcategoriesnow-getsumwithcategoriespast>0"></h3>
                     <h3 class="triangle-down pt1" *ngIf="getsumwithcategoriespast-getsumwithcategoriesnow>0"></h3>
@@ -18,11 +54,11 @@
                     <h4 class="pl2 yellow" *ngIf="getsumwithcategoriespast>=getsumwithcategoriesnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{nam}}</h5>
+                    <h5>Năm {{hrmReportService.nam}}</h5>
                     <h5>{{getsumwithcategoriesnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{nam-1}}</h5>
+                    <h5>Năm {{hrmReportService.nam-1}}</h5>
                     <h5>{{getsumwithcategoriespast}}</h5>
                 </div>
             </div>
@@ -31,7 +67,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
             <!-- <app-stacked-area-chart class="stacked-chart" [receivedData]="stackedAreaChart"></app-stacked-area-chart> -->
             <div class="different">
-                <div class="title">{{title}} tháng {{thang}} năm {{nam}} và năm {{nam-1}}</div>
+                <div class="title">{{title}} tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}} và năm {{hrmReportService.nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1" *ngIf="getsumwithmonthnow-getsumwithmonthpast>0"></h3>
                     <h3 class="triangle-down pt1" *ngIf="getsumwithmonthpast-getsumwithmonthnow>0"></h3>
@@ -47,11 +83,11 @@
                     <h4 class="pl2 yellow" *ngIf="getsumwithmonthpast>=getsumwithmonthnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{nam}}</h5>
+                    <h5>Năm {{hrmReportService.nam}}</h5>
                     <h5>{{getsumwithmonthnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{nam-1}}</h5>
+                    <h5>Năm {{hrmReportService.nam-1}}</h5>
                     <h5>{{getsumwithmonthpast}}</h5>
                 </div>
             </div>
@@ -60,7 +96,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
             <!-- <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart> -->
             <div class="different">
-                <div class="title">Số lượng nhân sự tháng {{thang}} năm {{nam}} và {{nam-1}}</div>
+                <div class="title">Số lượng nhân sự tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}} và {{hrmReportService.nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1" *ngIf="getcountedhrminmonthnow-getcountedhrminmonthpast>0"></h3>
                     <h3 class="triangle-down pt1" *ngIf="getcountedhrminmonthpast-getcountedhrminmonthnow>0"></h3>
@@ -76,11 +112,11 @@
                     <h4 class="pl2 yellow" *ngIf="getcountedhrminmonthpast>=getcountedhrminmonthnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{nam}}</h5>
+                    <h5>Năm {{hrmReportService.nam}}</h5>
                     <h5>{{getcountedhrminmonthnow}} người</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
-                    <h5>Năm {{nam-1}}</h5>
+                    <h5>Năm {{hrmReportService.nam-1}}</h5>
                     <h5>{{getcountedhrminmonthpast}} người</h5>
                 </div>
             </div> 
@@ -88,7 +124,7 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
             <!-- <app-stacked-area-chart class="stacked-chart"></app-stacked-area-chart> -->
             <div class="different">
-                <div class="title">Số lượng nhân sự tăng, giảm tháng {{thang}} năm {{nam}}</div>
+                <div class="title">Số lượng nhân sự tăng, giảm tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}}</div>
                 <div class="percent flex flex-wrap w-100 justify-center">
                     <h4 class="pl2" style="color: #06f812;">Tăng {{getcountedallnewhr}}</h4>
                     <h4 class="pl2" style="color: #fa0303;">Giảm {{getcountedallquitedhr}}</h4>
@@ -118,11 +154,32 @@
     
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 block2">
         <div class="title">{{title}}</div>
-        <app-grouped-bar-chart [receivedData]="getsumwithcategorieseachmonth"></app-grouped-bar-chart>
+        <div class="flex">
+            <app-grouped-bar-chart [receivedData]="getsumwithcategorieseachmonth"></app-grouped-bar-chart>
+            <table class="table table-dark">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+       
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2">
-        <div class="title">Chênh lệch {{title}} {{nam-1}} và {{nam}}</div>
+        <div class="title">Chênh lệch {{title}} {{hrmReportService.nam-1}} và {{hrmReportService.nam}}</div>
         <app-line-chart [receivedData]="getsumwithcategorieseachdifferent"></app-line-chart>
     </div>
     
@@ -139,12 +196,12 @@
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
-        <div class="title">Tăng trưởng so với tháng trước năm {{nam}}</div>
+        <div class="title">Tăng trưởng so với tháng trước năm {{hrmReportService.nam}}</div>
         <app-line-chart [receivedData]="getdifferenteachmonth"></app-line-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
-        <div class="title">% tăng trưởng so với tháng trước năm {{nam}}</div>
+        <div class="title">% tăng trưởng so với tháng trước năm {{hrmReportService.nam}}</div>
         <app-line-chart [receivedData]="getdifferentpercenteachmonth"></app-line-chart>
     </div>
 </div>
