--- a/src/app/shared/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/shared/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -6,6 +6,7 @@
 [xAxis]="showXAxis"
 [yAxis]="showYAxis"
 [legend]="showLegend"
+[tooltipDisabled]="tooltipDisabled"
 [showXAxisLabel]="showXAxisLabel"
 [showYAxisLabel]="showYAxisLabel"
 [xAxisLabel]="xAxisLabel"
