--- a/src/app/shared/grouped-bar-chart/grouped-bar-chart.component.html
+++ b/src/app/shared/grouped-bar-chart/grouped-bar-chart.component.html
@@ -11,6 +11,10 @@
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [legendTitle]="legendTitle"
+  [barPadding]="barPadding"
+  [groupPadding]="groupPadding"
+  [showGridLines]="showGridLines"
+  [showDataLabel]="showDataLabel"
   (select)="onSelect($event)"
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)">
